<resources>
    <string name="app_name">guess</string>
    <string name="button_name">Угадать!</string>
    <string name="behind">Бери выше!</string>
    <string name="ahead">Бери ниже!</string>
    <string name="hit">ЛУЧШИЙ!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play_more">сыграть еще</string>
    <string name="try_to_guess_10">Попробуйте угадать число от 1 до 10</string>
    <string name="try_to_guess_100">Попробуйте угадать число от 1 до 100</string>
    <string name="error">Вы ввели пустое значение</string>
    <string name="ahead_error_10">Число больше 10. Попробуйте еще!</string>
    <string name="ahead_error_100">Число больше 100. Попробуйте еще!</string>
    <string name="lvlHrd">+1</string>
    <string name="lvlEasy">-1</string>
    <string name="exit">Выход</string>
</resources>